--- a/src/main/resources/templates/error/500/index.html
+++ b/src/main/resources/templates/error/500/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https:///support.github.com/Quick-Community/site/blob/main/styles/style.css" />
-    <link rel="icon" href="https:///support.github.com/Quick-Community/site/blob/main/imgs/logo.png" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Quick-Community/site/main/styles/style.css" />
+    <link rel="icon" href="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logo.png" />
     <title>REE6 | Internal Error</title>
     <style>
         footer {
@@ -52,12 +52,12 @@
 <div class="cursor-modal"></div>
 <header>
     <nav class="desktop-nav">
-        <a href="https:///support.github.com/Quick-Community/site/blob/main/#home">Home</a>
-        <a href="https:///support.github.com/Quick-Community/site/blob/main/#features">Features</a>
-        <a href="https:///support.github.com/Quick-Community/site/blob/main/#team">Team</a>
-        <a href="https:///support.github.com/Quick-Community/site/blob/main/#invite">Invite</a>
-        <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/panel">Dashboard</a>
-        <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/discord/auth">Login</a>
+        <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#home">Home</a>
+        <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#features">Features</a>
+        <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#team">Team</a>
+        <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#invite">Invite</a>
+        <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/panel">Dashboard</a>
+        <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/discord/auth">Login</a>
     </nav>
     <button class="hamburger-button">
         <span class="line-one"></span>
@@ -65,12 +65,12 @@
     </button>
     <nav class="hamburger-wrapper">
         <div class="hamburger-container">
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#home"><span>Home</span></a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#features"><span>Features</span></a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#team"><span>Team</span></a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#invite"><span>Invite</span></a>
-            <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/panel"><span>Dashboard</span></a>
-            <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/discord/auth"><span>Login</span></a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#home"><span>Home</span></a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#features"><span>Features</span></a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#team"><span>Team</span></a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#invite"><span>Invite</span></a>
+            <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/panel"><span>Dashboard</span></a>
+            <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main/discord/auth"><span>Login</span></a>
         </div>
     </nav>
 </header>
@@ -88,16 +88,16 @@
             >
                 Internal Server Error |
                 <strong
-                        data-copy="support@/support.github.com/Quick-Community/site/blob/main"
+                        data-copy="support@raw.githubusercontent.com/Quick-Community/site/main"
                         data-highlight=""
                         data-color-background="#ef2222"
                         data-color-dot="#fff"
                 >
-                    support@/support.github.com/Quick-Community/site/blob/main
+                    support@raw.githubusercontent.com/Quick-Community/site/main
                 </strong>
                 <p th:if="${errorMessage != null}" th:text="${errorMessage}">Message</p>
             </div>
-            <a th:href="@{'/'}" href="https://cp./support.github.com/Quick-Community/site/blob/main" data-highlight="" class="hero-cta"
+            <a th:href="@{'/'}" href="https://cp.raw.githubusercontent.com/Quick-Community/site/main" data-highlight="" class="hero-cta"
             >Ree6 Respawn</a
             >
         </div>
@@ -113,13 +113,13 @@
     <div class="footer-nav">
         <div class="nav-list">
             <strong>Navigation</strong>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#home">Home</a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#features">Features</a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/#team">Team</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#home">Home</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#features">Features</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/#team">Team</a>
             <a
                     data-color-background="#5865F2"
                     data-color-dot="#fff"
-                    href="https://invite./support.github.com/Quick-Community/site/blob/main"
+                    href="https://invite.raw.githubusercontent.com/Quick-Community/site/main"
                     target="_blank"
                     rel="noopener noreferrer"
             >Invite</a
@@ -127,21 +127,21 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
-            <a href="https:///support.github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/privacy/">Privacy Policy</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/impressum/">Impressum</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/protection/">Data Protection</a>
             <button
-                    data-copy="legal@/support.github.com/Quick-Community/site/blob/main"
+                    data-copy="legal@raw.githubusercontent.com/Quick-Community/site/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                legal@/support.github.com/Quick-Community/site/blob/main
+                legal@raw.githubusercontent.com/Quick-Community/site/main
             </button>
         </div>
         <div class="nav-list">
             <strong>Contact</strong>
             <a
-                    href="https://support./support.github.com/Quick-Community/site/blob/main"
+                    href="https://support.raw.githubusercontent.com/Quick-Community/site/main"
                     target="_blank"
                     rel="noopener noreferrer"
             >Discord</a
@@ -159,11 +159,11 @@
             >Github</a
             >
             <button
-                    data-copy="support@/support.github.com/Quick-Community/site/blob/main"
+                    data-copy="support@raw.githubusercontent.com/Quick-Community/site/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                support@/support.github.com/Quick-Community/site/blob/main
+                support@raw.githubusercontent.com/Quick-Community/site/main
             </button>
         </div>
     </div>
@@ -184,9 +184,9 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/time.js"></script>
-    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
-    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/time.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/navigation.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/cursor.js"></script>
 </footer>
 </body>
 </html>
