--- a/src/main/resources/templates/panel/logging/index.html
+++ b/src/main/resources/templates/panel/logging/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/styles/style.css" />
-      <link rel="icon" href="https://github.com/Quick-Community/site/blob/main/imgs/logo.png" />
+      <link rel="stylesheet" href="https://raw.githubusercontent.com/Quick-Community/site/main/styles/style.css" />
+      <link rel="icon" href="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logo.png" />
       <title>REE6 | Logging</title>
       <style>
          footer {
@@ -119,9 +119,9 @@
                <div class="server-profile">
                   <div class="profile-img-wrapper">
                      <img
-                        th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
+                        th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg'}"
                         th:alt="${guild.getName()} + 'Server Logo'"
-                        src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
+                        src="https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg"
                         alt="Servername Server Logo"
                         />
                   </div>
@@ -179,15 +179,15 @@
             </div>
             <div class="nav-list">
                <strong>Legal</strong>
-               <a href="https://github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
-               <a href="https://github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
-               <a href="https://github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
+               <a href="https://raw.githubusercontent.com/Quick-Community/site/main/privacy/">Privacy Policy</a>
+               <a href="https://raw.githubusercontent.com/Quick-Community/site/main/impressum/">Impressum</a>
+               <a href="https://raw.githubusercontent.com/Quick-Community/site/main/protection/">Data Protection</a>
                <button
-                  data-copy="legal@github.com/Quick-Community/site/blob/main"
+                  data-copy="legal@raw.githubusercontent.com/Quick-Community/site/main"
                   data-color-background="#ef2222"
                   data-color-dot="#fff"
                   >
-               legal@github.com/Quick-Community/site/blob/main
+               legal@raw.githubusercontent.com/Quick-Community/site/main
                </button>
             </div>
             <div class="nav-list">
@@ -211,11 +211,11 @@
                   >Github</a
                   >
                <button
-                  data-copy="support@github.com/Quick-Community/site/blob/main"
+                  data-copy="support@raw.githubusercontent.com/Quick-Community/site/main"
                   data-color-background="#ef2222"
                   data-color-dot="#fff"
                   >
-               support@github.com/Quick-Community/site/blob/main
+               support@raw.githubusercontent.com/Quick-Community/site/main
                </button>
             </div>
          </div>
@@ -236,11 +236,11 @@
                >
             ©Ree6 <span data-time="0"></span>
          </div>
-         <script src="https://github.com/Quick-Community/site/blob/main/js/time.js"></script>
-         <script src="https://github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
-         <script src="https://github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
-         <script src="https://github.com/Quick-Community/site/blob/main/js/vanilla-tilt.js"></script>
-         <script src="https://github.com/Quick-Community/site/blob/main/js/logging.js"></script>
+         <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/time.js"></script>
+         <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/navigation.js"></script>
+         <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/cursor.js"></script>
+         <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/vanilla-tilt.js"></script>
+         <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/logging.js"></script>
          <script th:inline="javascript">
             function updateSettings(name) {
                var element = document.getElementById(name);
