--- a/src/main/resources/templates/panel/moderation/index.html
+++ b/src/main/resources/templates/panel/moderation/index.html
@@ -4,8 +4,8 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/styles/style.css" />
-   <link rel="icon" href="https://github.com/Quick-Community/site/blob/main/imgs/logo.png" />
+   <link rel="stylesheet" href="https://raw.githubusercontent.com/Quick-Community/site/main/styles/style.css" />
+   <link rel="icon" href="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logo.png" />
    <title>REE6 | Moderation</title>
    <style>
       footer {
@@ -137,9 +137,9 @@
          <div class="server-profile">
             <div class="profile-img-wrapper">
                <img
-                       th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
+                       th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg'}"
                        th:alt="${guild.getName()} + 'Server Logo'"
-                       src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
+                       src="https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg"
                        alt="Server Logo" />
             </div>
             <h4 th:text="${guild.getName()}">Server</h4>
@@ -194,7 +194,7 @@
                           data-color-background="#ef2222"
                           data-state=""
                   >
-                     <img src="https://github.com/Quick-Community/site/blob/main/imgs/trash.svg" alt="DELETE MESSAGE" />
+                     <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/trash.svg" alt="DELETE MESSAGE" />
                   </button>
                </form>
             </div>
@@ -246,7 +246,7 @@
                           data-color-dot="#fff"
                           data-color-background="#ef2222"
                   >
-                     <img src="https://github.com/Quick-Community/site/blob/main/imgs/trash.svg" alt="DELETE MESSAGE" />
+                     <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/trash.svg" alt="DELETE MESSAGE" />
                   </button>
                </form>
                <div class="entries-wrapper">
@@ -261,7 +261,7 @@
                      >
                        <div th:id="${word}" class="inner-text" th:text="${word}">test</div>
                        <button type="button" class="delete">
-                         <img src="https://github.com/Quick-Community/site/blob/main/imgs/trash.svg" alt="DELETE MESSAGE"/>
+                         <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/trash.svg" alt="DELETE MESSAGE"/>
                        </button>
                      </div>
                   </form>
@@ -303,15 +303,15 @@
       </div>
       <div class="nav-list">
          <strong>Legal</strong>
-         <a href="https://github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
-         <a href="https://github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
-         <a href="https://github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
+         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/privacy/">Privacy Policy</a>
+         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/impressum/">Impressum</a>
+         <a href="https://raw.githubusercontent.com/Quick-Community/site/main/protection/">Data Protection</a>
          <button
-                 data-copy="legal@github.com/Quick-Community/site/blob/main"
+                 data-copy="legal@raw.githubusercontent.com/Quick-Community/site/main"
                  data-color-background="#ef2222"
                  data-color-dot="#fff"
          >
-            legal@github.com/Quick-Community/site/blob/main
+            legal@raw.githubusercontent.com/Quick-Community/site/main
          </button>
       </div>
       <div class="nav-list">
@@ -335,11 +335,11 @@
          >Github</a
          >
          <button
-                 data-copy="support@github.com/Quick-Community/site/blob/main"
+                 data-copy="support@raw.githubusercontent.com/Quick-Community/site/main"
                  data-color-background="#ef2222"
                  data-color-dot="#fff"
          >
-            support@github.com/Quick-Community/site/blob/main
+            support@raw.githubusercontent.com/Quick-Community/site/main
          </button>
       </div>
    </div>
@@ -360,12 +360,12 @@
       >
       ©Ree6 <span data-time="0"></span>
    </div>
-   <script src="https://github.com/Quick-Community/site/blob/main/js/time.js"></script>
-   <script src="https://github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
-   <script src="https://github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
-   <script src="https://github.com/Quick-Community/site/blob/main/js/vanilla-tilt.js"></script>
-   <script src="https://github.com/Quick-Community/site/blob/main/js/entrylist.js"></script>
-   <script src="https://github.com/Quick-Community/site/blob/main/js/logging.js"></script>
+   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/time.js"></script>
+   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/navigation.js"></script>
+   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/cursor.js"></script>
+   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/vanilla-tilt.js"></script>
+   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/entrylist.js"></script>
+   <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/logging.js"></script>
    <script th:inline="javascript">
       function updateSettings(name) {
          var element = document.getElementById(name);
@@ -563,7 +563,7 @@
                button.className = 'delete';
 
                var image = document.createElement('img');
-               image.setAttribute('src', 'https://github.com/Quick-Community/site/blob/main/imgs/trash.svg');
+               image.setAttribute('src', 'https://raw.githubusercontent.com/Quick-Community/site/main/imgs/trash.svg');
                image.setAttribute('alt', 'DELETE MESSAGE');
 
                button.append(image);
