--- a/src/main/resources/templates/panel/server/index.html
+++ b/src/main/resources/templates/panel/server/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/styles/style.css" />
-    <link rel="icon" href="https://github.com/Quick-Community/site/blob/main/imgs/logo.png" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Quick-Community/site/main/styles/style.css" />
+    <link rel="icon" href="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/logo.png" />
     <title>REE6 | Server Stats</title>
     <style>
         footer {
@@ -119,9 +119,9 @@
             >
                 <!-- INSERT SERVER IMAGE PATH IN IMG SRC -->
                 <img
-                        th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
+                        th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg'}"
                         th:alt="${guild.getName()} + 'Server Logo'"
-                        src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
+                        src="https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg"
                         alt="Servername Server Logo"
                 />
             </div>
@@ -133,9 +133,9 @@
                 data-color-dot="#fff"
         >
             <img
-                    th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
+                    th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg'}"
                     th:alt="${guild.getName()} + 'Server Logo'"
-                    src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
+                    src="https://raw.githubusercontent.com/Quick-Community/site/main/serverlogo/base.svg"
                     alt="Servername Server Logo"
             />
         </div>
@@ -154,7 +154,7 @@
                     data-color-background="#ea0f77"
             >
                 <div class="server-stat-img">
-                    <img src="https://github.com/Quick-Community/site/blob/main/imgs/invites.svg" alt="Saved Invites" />
+                    <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/invites.svg" alt="Saved Invites" />
                 </div>
                 <h3>Saved Invites</h3>
                 <div class="output-stats">
@@ -170,7 +170,7 @@
                     data-color-background="#ea0f77"
             >
                 <div class="server-stat-img">
-                    <img src="https://github.com/Quick-Community/site/blob/main/imgs/trend.svg" alt="Saved Invites" />
+                    <img src="https://raw.githubusercontent.com/Quick-Community/site/main/imgs/trend.svg" alt="Saved Invites" />
                 </div>
                 <h3>Command Stats</h3>
                 <div class="output-stats">
@@ -201,21 +201,21 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https://github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
-            <a href="https://github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
-            <a href="https://github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/privacy/">Privacy Policy</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/impressum/">Impressum</a>
+            <a href="https://raw.githubusercontent.com/Quick-Community/site/main/protection/">Data Protection</a>
             <button
-                    data-copy="legal@github.com/Quick-Community/site/blob/main"
+                    data-copy="legal@raw.githubusercontent.com/Quick-Community/site/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                legal@github.com/Quick-Community/site/blob/main
+                legal@raw.githubusercontent.com/Quick-Community/site/main
             </button>
         </div>
         <div class="nav-list">
             <strong>Contact</strong>
             <a
-                    href="https://support.github.com/Quick-Community/site/blob/main"
+                    href="https://support.raw.githubusercontent.com/Quick-Community/site/main"
                     target="_blank"
                     rel="noopener noreferrer"
             >Discord</a
@@ -233,11 +233,11 @@
             >Github</a
             >
             <button
-                    data-copy="support@github.com/Quick-Community/site/blob/main"
+                    data-copy="support@raw.githubusercontent.com/Quick-Community/site/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                support@github.com/Quick-Community/site/blob/main
+                support@raw.githubusercontent.com/Quick-Community/site/main
             </button>
         </div>
     </div>
@@ -258,10 +258,10 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https://github.com/Quick-Community/site/blob/main/js/time.js"></script>
-    <script src="https://github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
-    <script src="https://github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
-    <script src="https://github.com/Quick-Community/site/blob/main/js/vanilla-tilt.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/time.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/navigation.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/cursor.js"></script>
+    <script src="https://raw.githubusercontent.com/Quick-Community/site/main/js/vanilla-tilt.js"></script>
 </footer>
 </body>
 </html>
